ECOPROJECT-3085: Implement a sharing option for an assesment
Allow users to share an assesment via link
The toke/link created can be used by anyone and doesn't have expiration
Users can also remove an existing token, in order to stop sharing the assesment
